# dbt_lecture_1810

./: dbt_project.yml  pyproject.toml
models/marts/: mart_sales.sql  schema_marts.yml
models/staging/: schema__staging.yml  sources__staging.yml  stg_product_range.sql  stg_transactions.sql
