[tool.poetry]
name = "dbt-lecture-1810"
version = "0.1.0"
description = ""
authors = ["Gaëtan Manchon <gmanchon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.8.7"
dbt-bigquery = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
